ajout Menu principale dans la couche presentation et resoudre les problemes de sonarqube issues